2024, 11. 05 🛠️ 라이더 보드 디테일 페이지 CSS 작업 🚧

--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -402,6 +402,10 @@
     }
 }
 
+.commentInputLine>.commentUploadBtn:hover, .commentBtnLine>label:hover{
+    box-shadow: inset 2px 2px 10px gray, inset -2px -2px 10px gray;
+}
+
 @media(max-width:1120px){
     .PageTopLine>.PageTitle{
         display: none;
