--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -335,12 +335,12 @@
 .CommentInfoLine>.ReplyBox{
     display: flex;
     height: max-content;
+    min-height: 120px;
+    max-height: 120px;
     align-items: center;
     border-top:2px dashed orange;
+    box-sizing: border-box;
     gap: 10px;
-    >div{
-        flex-grow: 1;
-    }
     .TopLine{
         display: flex;
         width: 100%;
@@ -371,6 +371,24 @@
         width: 110px;
         height: 90%;
     }
+}
+
+.CommentInfoLine>.ReplyBox>.profileImg{
+    width: 12vw;
+    min-width: 70px;
+    max-height: 80px;
+    height: 12vw;
+    min-height: 70px;
+    max-height: 80px;
+    border-radius: 10px;
+}
+
+.CommentInfoLine>.ReplyBox>.ReplyInfoLine{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: max-content;
+    max-width: 120px;
 }
 
 
