--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -315,44 +315,55 @@
 /* 댓글 영역에서 대댓글 입력하는 박스 (댓글 정보 바로 아래) */
 
 .CommentInfoLine>.BoardReplyInsertBox{
+    display: flex;
+    width: 100%;
     height: 50px;
     align-items: center;
+    justify-content: end;
+    gap: 10px;
 }
 
+/* 대댓글 작성자 (로그인 유저) */
 .BoardReplyInsertBox>h2{
     display: flex;
     align-items: center;
-    width: 300px;
+    width: max-content;
+    max-width: 130px;
     height: 100%;
 }
 
 .BoardReplyInsertBox>.BoardReplyInputLine{
     display: flex;
-    margin-left: 10px;
+    align-items: center;
     justify-content: right;
-    gap: 10px;
-    width: 80%;
+    gap: 5px;
+    width: 100%;
     height: 100%;
 }
 
 .BoardReplyInputLine>.ReplyContextBox{
-    width: 60%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     font-size: 25px;
     font-weight: bold;
-    box-sizing: border-box;
     padding: 0 10px;
+    box-sizing: border-box;
 }
 
 .BoardReplyInputLine>.uploadReplyBtn{
     display: flex;
-    width: 100px;
-    height: 80%;
     justify-content: center;
     align-items: center;
     border: 2px solid orange;
+    box-sizing: border-box;
     border-radius: 10px;
     cursor: pointer;
+    font-size: medium;
+    font-weight: bolder;
+    width: 60px;
+    min-width: 60px;
+    height: 35px;
+    min-height: 35px;
 }
 
 .BoardReplyInputLine>.replyCancelBtn{
@@ -468,7 +479,7 @@
     }
 }
 
-.commentInputLine>.commentUploadBtn:hover, .commentBtnLine>label:hover{
+.commentInputLine>.commentUploadBtn:hover, .commentBtnLine>label:hover, .BoardReplyInputLine>.uploadReplyBtn {
     box-shadow: inset 2px 2px 10px gray, inset -2px -2px 10px gray;
 }
 
