--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -233,6 +233,7 @@
     height: max-content;
     max-height: 120px;
     align-items: center;
+    gap: 10px;
 }
 
 /* 댓글 작성자 프로필 이미지 */
@@ -289,7 +290,6 @@
 }
 
 .CommentInfo>.BottomLine{
-    margin-bottom: 10px;
         .ChangeCommentContext{
             width: 60%;
             height: 80%;
@@ -343,9 +343,9 @@
 
 .BoardReplyInputLine>.ReplyContextBox{
     width: 100%;
-    height: 100%;
-    font-size: 25px;
-    font-weight: bold;
+    height: 40px;
+    min-height: 40px;
+    font-size: medium;
     padding: 0 10px;
     box-sizing: border-box;
 }
@@ -359,7 +359,6 @@
     border-radius: 10px;
     cursor: pointer;
     font-size: medium;
-    font-weight: bolder;
     width: 60px;
     min-width: 60px;
     height: 35px;
@@ -479,7 +478,7 @@
     }
 }
 
-.commentInputLine>.commentUploadBtn:hover, .commentBtnLine>label:hover, .BoardReplyInputLine>.uploadReplyBtn {
+.commentInputLine>.commentUploadBtn:hover, .commentBtnLine>label:hover, .BoardReplyInputLine>.uploadReplyBtn:hover {
     box-shadow: inset 2px 2px 10px gray, inset -2px -2px 10px gray;
 }
 
@@ -510,6 +509,10 @@
     }
 
     .commentInputLine>h2{
+        display: none;
+    }
+
+    .BoardReplyInsertBox>h2{
         display: none;
     }
 
