--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -323,15 +323,6 @@
     gap: 10px;
 }
 
-/* 대댓글 작성자 (로그인 유저) */
-.BoardReplyInsertBox>h2{
-    display: flex;
-    align-items: center;
-    width: max-content;
-    max-width: 130px;
-    height: 100%;
-}
-
 .BoardReplyInsertBox>.BoardReplyInputLine{
     display: flex;
     align-items: center;
@@ -377,6 +368,7 @@
     background-image: url(../../../public/img/DeleteImg.png);
 }
 
+
 /* 대댓글 목록 영역 */
 .CommentBox>.CommentReplyLine{
     display: flex;
@@ -385,49 +377,6 @@
     width: 100%;
     height: max-content;
     gap: 10px;
-}
-
-/* 대댓글 박스 */
-.CommentReplyLine>.ReplyBox{
-    display: flex;
-    height: max-content;
-    width: 100%;
-    min-height: 120px;
-    max-height: 120px;
-    align-items: center;
-    border-top:2px dashed orange;
-    box-sizing: border-box;
-    gap: 10px;
-    .TopLine{
-        display: flex;
-        width: 100%;
-    }
-    input{
-        width: 40px;
-        height: 40px;
-        background-size: cover;
-        background-color: rgba(0, 0, 0, 0);
-        border: none;
-        cursor: pointer;
-    }
-    .commentChangeBtn{
-        margin-left: 5px;
-        background-image: url(../../../public/img/ChangeBtnImg.png);
-        
-    }
-    .commentDeleteBtn{
-        background-image: url(../../../public/img/DeleteImg.png);
-    }
-    .ReplyChangeUpLabel{
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 2px solid orange;
-        border-radius: 10px;
-        width: 110px;
-        height: 90%;
-    }
 }
 
 /* 대댓글 작성자 프로필 이미지 */
@@ -441,14 +390,60 @@
     border-radius: 10px;
 }
 
+/* 대댓글 박스 */
+.CommentReplyLine>.ReplyBox{
+    display: flex;
+    height: max-content;
+    width: 100%;
+    min-height: 120px;
+    max-height: 120px;
+    align-items: center;
+    border-top:2px dashed orange;
+    box-sizing: border-box;
+    gap: 10px;
+}
+
 .CommentReplyLine>.ReplyBox>.ReplyInfoLine{
     display: flex;
     flex-direction: column;
     width: 100%;
     height: max-content;
-    max-width: 120px;
 }
 
+/* 대댓글 박스 탑라인 */
+.ReplyBox>.ReplyInfoLine>.TopLine{
+    display: flex;
+    width: 100%;
+    input{
+        width: 40px;
+        height: 40px;
+        background-size: cover;
+        background-color: rgba(0, 0, 0, 0);
+        border: none;
+        cursor: pointer;
+    }
+}
+
+.ReplyInfoLine>.TopLine>.TopRight>.ReplyBtnLine{
+    .ReplyChangeBtn{
+        margin-left: 5px;
+        background-image: url(../../../public/img/ChangeBtnImg.png);
+        
+    }
+    .ReplyDeleteBtn{
+        background-image: url(../../../public/img/DeleteImg.png);
+    }
+    .ReplyChangeUpLabel{
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid orange;
+        border-radius: 10px;
+        width: 110px;
+        height: 90%;
+    }
+}
 
 .PageCommentLine>.commentInputLine{
     width: 100%;
