--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -241,8 +241,7 @@
 .Comment>.DefaultCommentBox{
     display: flex;
     width: 100%;
-    height: max-content;
-    max-height: 120px;
+    height: 100%;
     gap: 10px;
     align-items: center;
     justify-content: space-between;
@@ -264,8 +263,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 120px;
-    min-height: 120px;
+    height: 100%;
     width: 100%;
 }
 
@@ -337,29 +335,25 @@
 }
 
 /* 댓글 내용 수정 확인 버튼, 댓글 등록 버튼 */
-.CommentInfo>.CommentInfo_Bottom>.CommentBtnLine{
+.CommentInfo>.CommentInfo_Bottom>label{
     display: flex;
-    gap: 10px;
+    width: 85px;
+    height: 40px;
+    justify-content: center;
     align-items: center;
-    height: 100%;
-    width: max-content;
-    min-width: 85px;
-    label{
-        width: max-content;
-        height: max-content;
-        border: 2px solid orange;
-        border-radius: 10px;
-        padding: 5px;
-        box-sizing: border-box;
-        cursor: pointer;
-    }
+    border: 2px solid orange;
+    border-radius: 10px;
+    padding: 5px;
+    box-sizing: border-box;
+    cursor: pointer;
 }
 
 /* 댓글 축소모드 박스 */
 .Comment>.ShortCommentBox{
     display: none;
-    flex-direction: column;
-    height: 50%;
+    align-items: center;
+    height: 60px;
+    min-height: 60px;
     width: 100%;
 }
 
@@ -367,28 +361,25 @@
 .ShortCommentBox>.ChangeCommentContext{
     display: flex;
     width: 100%;
-    height: 80%;
+    height: 50px;
     font-size: 15px;
+    border-radius: 5px;
     box-sizing: border-box;
     padding: 5px
 }
 
 /* 댓글 축소모드 댓글 수정 확인 버튼, 댓글 등록 버튼 */
-.ShortCommentBox>.CommentBtnLine{
+.ShortCommentBox>label{
     display: flex;
-    align-self: flex-end;
-    width: max-content;
-    gap: 10px;
-    height: 20px;
-    label{
-        width: max-content;
-        height: max-content;
-        border: 2px solid orange;
-        border-radius: 10px;
-        padding: 5px;
-        box-sizing: border-box;
-        cursor: pointer;
-    }
+    width: 85px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid orange;
+    border-radius: 10px;
+    padding: 5px;
+    box-sizing: border-box;
+    cursor: pointer;
 }
 
 /* 댓글 영역에서 대댓글 입력하는 박스 (댓글 정보 바로 아래) */
@@ -594,6 +585,13 @@
         display: none;
     }
 
+    .Comment>.DefaultCommentBox{
+        height: 50%;
+    }
+
+    .Comment>.ShortCommentBox{
+        display: flex;
+    }
 }
 
 @media(max-width:600px){
@@ -610,4 +608,7 @@
         display: none;
     }
 
+    .Comment>.ShortCommentBox>text{
+        display: none;
+    }
 }
