--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -249,10 +249,10 @@
 
 /* 댓글 작성자 프로필 이미지 */
 .DefaultCommentBox>.ProfileImg{
-    width: 10vw;
+    width: 9vw;
     min-width: 60px;
     max-width: 100px;
-    height: 10vw;
+    height: 8vw;
     min-height: 60px;
     max-height: 100px;
     border-radius: 10px;
@@ -326,11 +326,16 @@
     }
 }
 
+
+.CommentInfo>.CommentInfo_Bottom{
+    gap: 10px;
+}
+
 /* 댓글 내용 수정 박스 */
 .CommentInfo>.CommentInfo_Bottom>.ChangeCommentContext{
     width: 100%;
     height: 80%;
-    font-size: 25px;
+    font-size: medium;
     box-sizing: border-box;
     padding: 5px;
 }
@@ -339,6 +344,7 @@
 .CommentInfo>.CommentInfo_Bottom>label{
     display: flex;
     width: 85px;
+    min-width: 85px;
     height: 40px;
     justify-content: center;
     align-items: center;
@@ -357,13 +363,14 @@
     height: 60px;
     min-height: 60px;
     width: 100%;
+    gap: 10px;
 }
 
 /* 댓글 축소모드 내용 수정 박스 */
 .ShortCommentBox>.ChangeCommentContext{
     width: 100%;
-    height: 50px;
-    font-size: 15px;
+    height: 40px;
+    font-size: medium;
     border-radius: 5px;
     box-sizing: border-box;
     padding: 5px
@@ -373,6 +380,7 @@
 .ShortCommentBox>label{
     display: flex;
     width: max-content;
+    min-width: 80px;
     height: 50px;
     justify-content: center;
     align-items: center;
@@ -585,6 +593,10 @@
     
     .CommentInfo>.CommentInfo_Bottom{
         display: none;
+    }
+
+    .CommentInfo>.CommentInfo_Top{
+        height: 100%;
     }
 
     .Comment>.ShortCommentBox{
