--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -223,7 +223,7 @@
     flex-direction: column;
     height: max-content;
     width: 100%;
-    gap: 10px;
+    gap: 5px;
 }
 
 /* 댓글 */
@@ -234,7 +234,6 @@
     height: 120px;
     min-height: 120px;
     align-items: center;
-    gap: 10px;
 }
 
 /* 댓글 기본 박스 */
@@ -395,10 +394,12 @@
 .CommentInfoLine>.BoardReplyInsertBox{
     display: flex;
     width: 100%;
-    height: 50px;
-    min-height: 50px;
+    height: 60px;
+    min-height: 60px;
     align-items: center;
+    box-sizing: border-box;
     gap: 10px;
+    border-top: 2px dashed orange;
 }
 
 /* 대댓글 작성자(로그인 유저 닉네임) */
