--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -463,8 +463,29 @@
     gap: 10px;
 }
 
+
+/* 대댓글 박스 */
+.CommentReplyLine>.ReplyBox{
+    display: flex;
+    height: max-content;
+    width: 100%;
+    height: 120px;
+    min-height: 120px;
+    align-items: center;
+    border-top:2px dashed orange;
+    box-sizing: border-box;
+    gap: 10px;
+}
+
+.ReplyBox>.DefaultReply{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+}
+
 /* 대댓글 작성자 프로필 이미지 */
-.CommentReplyLine>.ReplyBox>.ProfileImg{
+.DefaultReply>.ProfileImg{
     width: 10vw;
     min-width: 60px;
     max-height: 100px;
@@ -474,20 +495,7 @@
     border-radius: 10px;
 }
 
-/* 대댓글 박스 */
-.CommentReplyLine>.ReplyBox{
-    display: flex;
-    height: max-content;
-    width: 100%;
-    min-height: 120px;
-    max-height: 120px;
-    align-items: center;
-    border-top:2px dashed orange;
-    box-sizing: border-box;
-    gap: 10px;
-}
-
-.CommentReplyLine>.ReplyBox>.ReplyInfoLine{
+.DefaultReply>.ReplyInfoLine{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -495,7 +503,7 @@
 }
 
 /* 대댓글 박스 탑라인 */
-.ReplyBox>.ReplyInfoLine>.TopLine{
+.DefaultReply>.ReplyInfoLine>.TopLine{
     display: flex;
     width: 100%;
     input{
