--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -467,10 +467,11 @@
 /* 대댓글 박스 */
 .CommentReplyLine>.ReplyBox{
     display: flex;
-    height: max-content;
-    width: 100%;
+    flex-direction: column;
     height: 120px;
+    width: 100%;
     min-height: 120px;
+    max-height: 500px;
     align-items: center;
     border-top:2px dashed orange;
     box-sizing: border-box;
@@ -478,10 +479,13 @@
 }
 
 .ReplyBox>.DefaultReply{
+    align-items: center;
     display: flex;
     width: 100%;
     height: 100%;
+    max-height: 120px;
     gap: 10px;
+    box-sizing: border-box;
 }
 
 /* 대댓글 작성자 프로필 이미지 */
@@ -499,13 +503,19 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: max-content;
+    height: 100%;
+}
+
+.DefaultReply>.ReplyInfoLine>div{
+    display: flex;
+    align-items: center;
+    height: 50%;
+    width: 100%;
 }
 
 /* 대댓글 박스 탑라인 */
 .DefaultReply>.ReplyInfoLine>.TopLine{
-    display: flex;
-    width: 100%;
+    justify-content: space-between;
     input{
         width: 40px;
         height: 40px;
@@ -514,6 +524,14 @@
         border: none;
         cursor: pointer;
     }
+}
+
+.ReplyInfoLine>.TopLine>.TopRight{
+    display: flex;
+    width: max-content;
+    height: 100%;
+    align-items: center;
+    box-sizing: border-box;
 }
 
 .ReplyInfoLine>.TopLine>.TopRight>.ReplyBtnLine{
@@ -536,6 +554,20 @@
         height: 90%;
     }
 }
+
+.DefaultReply>.ReplyInfoLine>.BottomLine{
+}
+
+/* 대댓글 축소모드 */
+.ReplyBox>.ShortReply{
+    display: none;
+    width: 100%;
+    height: max-content;
+    max-height: 300px;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
 
 .PageCommentLine>.CommentInputLine{
     width: 100%;
@@ -615,6 +647,19 @@
     .BoardReplyInsertBox>text{
         display: none;
     }
+
+    .ReplyBox>.DefaultReply{
+        height: 50%;
+    }
+
+    .ReplyBox>.ShortReply{
+        display: flex;
+    }
+
+    .DefaultReply>.ReplyInfoLine>.BottomLine{
+        display: none;
+    }
+
 }
 
 @media(max-width:600px){
@@ -630,4 +675,21 @@
     .CommentInfo>.CommentInfo_Top>.CommentInfo_TopSub{
         justify-content: space-between;
     }
+
+    .DefaultReply>.ReplyInfoLine>.TopLine{
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        height: 100%;
+    }
+
+    .DefaultReply>.ReplyInfoLine>.TopLine>*{
+        width: 100%;
+        height: 50%;
+    }
+
+    .ReplyInfoLine>.TopLine>.TopRight{
+        justify-content: space-between;
+    }
+
+    
 }
