2024, 11. 11 🛠️ 라이더 보드 디테일 페이지 코드 작업 🚧
🛠️ 게시글 대댓글 보더 CSS 코드 수정 ✅

--- a/src/RidingAnywhere-client/css/RiderBoardDetail.css
+++ b/src/RidingAnywhere-client/css/RiderBoardDetail.css
@@ -460,6 +460,9 @@
     align-items: center;
     width: 100%;
     height: max-content;
+    padding: 10px 0;
+    box-sizing: border-box;
+    border-top: 2px dashed orange;
     gap: 10px;
 }
 
@@ -473,7 +476,7 @@
     min-height: 120px;
     max-height: 500px;
     align-items: center;
-    border-top:2px dashed orange;
+    border-bottom:2px dashed orange;
     box-sizing: border-box;
     gap: 10px;
 }
