--- a/src/RidingAnywhere-client/css/crewBoard.css
+++ b/src/RidingAnywhere-client/css/crewBoard.css
@@ -145,7 +145,7 @@
     cursor: pointer;
 }
 
-.filterBottom>.filterCheckBox:hover, .filterBottom>.filterInput:checked+label{
+.filterBottom>.filterInput:checked+label{
     border: 2px gold solid;
     background-image: linear-gradient(to right bottom,Orange, Yellow, Orange);
     -webkit-text-stroke-width: 0.1px;
@@ -153,6 +153,10 @@
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+}
+
+.filterBottom>.filterCheckBox:hover{
+    box-shadow: inset 2px 2px 10px gray, inset -2px -2px 10px gray;
 }
 
 /* 크루 게시글 리스트 라인 */
@@ -248,6 +252,7 @@
             .CrewBoardBoxLabel:hover{
                 cursor: pointer;
                 background-color: black;
+                box-shadow: inset 2px 2px 10px gray, inset -2px -2px 10px gray;
             }
         }
     }
