--- a/src/RidingAnywhere-client/css/crewBoard.css
+++ b/src/RidingAnywhere-client/css/crewBoard.css
@@ -61,6 +61,10 @@
     }
 }
 
+.boardTopLine>.WriteBtnNormal:hover{
+    box-shadow: inset 2px 2px 10px gray, inset -2px -2px 10px gray;
+}
+
 .boardFilterLine>div{
     width: 100%;
     height: 70px;
